# cpp-ideas

./: .gitignore  CMakeLists.txt  CMakePresets.json  pyproject.toml  requirements-dev.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: initialize.py  post_create.sh  setup_ccache.sh
.vcpkg/: vcpkg-extras  vcpkg.json
examples/: CMakeLists.txt  fmt_example.cpp  json_example.cpp  qt_example.cpp
include/: mainwindow.h  python_processor.h
python/: README.md  __init__.py  processor.py
src/: console_test.cpp  diagnostic_processor.py  main.cpp  mainwindow.cpp  python_processor.cpp
tests/: CMakeLists.txt  test_formatting.cpp  test_json.cpp  test_main.cpp  test_python_processor.cpp  test_stuff.cpp
